# win-git-status

./: CMakeLists.txt  Cargo.toml  README.md  conanfile.py
.github/workflows/: cmake.yml
src/: direntry.rs  dirstat.rs  error.rs  index.rs  lib.rs  main.rs  read_dir.rs  repo_status.rs  status.rs  tree.rs  worktree.rs
src/win-git-status/: CMakeLists.txt  Main.cpp  Repo.cpp  Repo.hpp  Status.cpp  Status.hpp
tests/: CMakeLists.txt  TestMain.cpp  TestNoArgs.cpp  TestRepo.cpp  TestRepoState.cpp  TestStatusBranch.cpp  TestStatusStaged.cpp  TestStatusUnmerged.cpp  TestStatusUnstaged.cpp  common.rs  index.rs  worktree.rs
tests/fixtures/: CMakeLists.txt  RepoBuilder.cpp  RepoBuilder.hpp  TempDirectory.cpp  TempDirectory.hpp  TempRepo.cpp  TempRepo.hpp
