[package]
name = "win_git_status"
version = "0.1.0"
authors = ["Nick <speedyleion@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0.1"
ignore = "0.4"

[dev-dependencies]
git2 = "0.13"
temp_testdir = "0.2"