[package]
name = "win_git_status"
version = "0.1.0"
authors = ["Nick <speedyleion@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nom = "6.0.1"
ignore = "0.4"
pathdiff = "0.2.0"
git2 = "0.13"
indoc = "1.0"
rayon = "1.5.0"
termcolor = "1.1.2"

[dev-dependencies]
temp_testdir = "0.2"